Closed Bug 1789358 Opened 2 years ago Closed 2 years ago

Blocked popup preference menu has white text on light grey background in Private window

Categories

(Firefox :: Menus, defect, P3)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
106 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox104 --- unaffected
firefox105 --- unaffected
firefox106 --- fixed

People

(Reporter: nchevobbe, Assigned: pbz)

References

(Regression)

Details

(Keywords: access, regression)

Attachments

(3 files)

See screenshot

The Bugbug bot thinks this bug should belong to the 'Firefox::Menus' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Menus

This appears to be a regression introduced by bug 1751481. Any idea what's going on here, pbz?

Severity: -- → S3
Flags: needinfo?(pbz)
Keywords: access, regression
Priority: -- → P3
Regressed by: 1751481

Thanks!
I can reproduce. This affects private the dark-themed browsing windows where normal windows are light themed (following system theme).
Taking a look.

Assignee: nobody → pbz
Status: NEW → ASSIGNED
Flags: needinfo?(pbz)

Set release status flags based on info from the regressing bug 1751481

Doesn't seem to affect Windows (11). Might be a macOS-only issue. I ran into similar problems in Bug 1749377 where the font color would not update correctly on macOS. This was fixed by https://phabricator.services.mozilla.com/D136933

OS: Unspecified → macOS
Pushed by pzuhlcke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/afd5d96808f2
Recompute widget color scheme before showing. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
Attached image Screenshot.png

I tried to reproduce the issue on Mac 10.13, using build 106.0a1(2022-09-06) and Beta 106.0b5 and same menu is displayed on Private Browsing as on screenshot. Is this expected? Thank you.

Flags: needinfo?(nchevobbe)

I won't be able to check my OSX machine for a while, but it didn't look like that, the private window was some shade of purple

Flags: needinfo?(nchevobbe)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: