Bug 1789358 - Recompute widget color scheme before showing. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D157172